--- a/tutorials/views/devices.xml
+++ b/tutorials/views/devices.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-   <record id="view_tutorials_devices_form" model="ir.ui.view">
+    <record id="view_tutorials_devices_form" model="ir.ui.view">
         <field name="name">optimus.kpi.devices.form</field>
         <field name="model">optimus.kpi.devices</field>
         <field name="arch" type="xml">
@@ -17,14 +17,18 @@
                     <notebook>
                         <page name="description" string="Description">
                             <group>
-                             <field name="desc"/>
+                                <field name="desc"/>
+                            </group>
+                            <group>
+                                <button name="action_generate_description" type="object" string="Gen desc"
+                                        class="oe_highlight"/>
                             </group>
                         </page>
                     </notebook>
                 </sheet>
             </form>
         </field>
-   </record>
+    </record>
 
     <record id="view_tutorials_devices_tree" model="ir.ui.view">
         <field name="name">optimus.kpi.devices.tree</field>
